2014-10-01  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec/mageec.h (ml): Replace with pointer to machine
	learner.
	* mageec/mageec.cpp (mageec_framework::init): Create either normal
	or file machine learner based on MAGEEC_MODE environment variable.
	Replace ml member references with pointer equivalent.
	(mageec_framework::new_file): Add assertion to check MAGEEC is
	initialized.
	Replace ml member references with pointer equivalent.
	(mageec_framework::end_file): Likewise.
	(mageec_framework::finish): Likewise.
	(mageec_framework::all_passes): Likewise.
	(mageec_framework::take_features): Likewise.

2014-09-30  Simon Cook  <simon.cook@embecosm.com>

	* training/evaltool.py: Added.
	* training/execute-pt2.sh: Added.
	* training/execute.sh: Added.
	* training/test-pt2.sh: Added.
	* training/test.py: Added.

2014-08-05  James Pallister  <james.pallister@bristol.ac.uk>
	Fix #4,  GCC plugin segfaults when a call does not have a LHS value.

	* gcc_plugin/feature-extract.cpp: Check whether the LHS is a valid
	    pointer before dereferencing.

2014-08-05  James Pallister  <james.pallister@bristol.ac.uk>
	Fix divide by zero in the feature extractor

	* gcc_plugin/feature-extract.cpp: Fix divide by zero if bb_count is
	    zero

2014-08-01  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-callbacks.cpp (mageec_pass_gate): Replace fprintf
	calls using result to use %i instead %hhi.
	* include/mageec/elfhash.h (hashedelf): Change type of data to
	unsigned char *.
	Add newline to end of file.
	* include/mageec/mageec-decision.h (enum decision): Add newline to
	end of file.
	* include/mageec/mageec-features.h: Add newline to end of file.
	(mageec_feature): Add virtual destructor.
	(class basic_feature): Add extra int to avoid padding warning.
	* include/mageec/mageec-ml.h (mageec_ml): Rename passes to
	known_passes.
	Add virtual destructor.
	(mageec_ml::raw_result): Correct @param comment.
	* include/mageec/mageec-passes.h: Add newline to end of file.